--- a/roles/sat6-host-groups/tasks/main.yml
+++ b/roles/sat6-host-groups/tasks/main.yml
@@ -1,50 +1,34 @@
 ---
 
-- name: get current host groups
-  shell: hammer --csv hostgroup list | tail -n +2 | awk -F ',' '{print $3}'
-  register: current_host_groups
-  changed_when: false
-
-- name: create host groups 
-  command: >
-    hammer hostgroup
-    {% if item.title not in current_host_groups.stdout %}
-    create 
-    --name '{{ item.name }}'
-    {% else %} 
-    update 
-    --title '{{ item.title }}'
-    {% endif %}
-    --organizations '{{ organization }}'
-    --query-organization '{{ organization }}'
-    --locations '{{ locations|join(',') }}'
-    {% if item.parent is defined %}                --parent '{{ item.parent }}'{% endif %}
-    {% if item.description is defined %}           --description '{{ item.description }}'{% endif %}
-    {% if item.lifecycle_environment is defined %} --lifecycle-environment '{{ item.lifecycle_environment }}'{% endif %}
-    {% if item.content_view is defined %}          --content-view '{{ item.content_view }}'{% endif %}
-    {% if item.content_source is defined %}        --content-source '{{ item.content_source }}'{% endif %}
-    {% if item.puppet_environment is defined %}    --environment '{{ item.puppet_environment }}'{% endif %}
-    {% if item.compute_resource is defined %}      --compute-resource '{{ item.compute_resource }}'{% endif %}
-    {% if item.compute_profile_id is defined %}    --compute-profile-id '{{ item.compute_profile_id }}'{% endif %}
-    {% if item.puppet_master is defined %}         --puppet-proxy '{{ item.puppet_master }}'{% endif %}
-    {% if item.puppet_ca is defined %}             --puppet-ca-proxy '{{ item.puppet_ca }}'{% endif %}
-    {% if item.puppet_classes is defined %}        --puppet-classes '{{ item.puppet_classes|join(',') }}'{% endif %}
-    {% if item.domain is defined %}                --domain '{{ item.domain }}'{% endif %}
-    {% if item.subnet is defined %}                --subnet '{{ item.subnet }}'{% endif %}
-    {% if item.architecture is defined %}          --architecture '{{ item.architecture }}'{% endif %}
-    {% if item.os is defined %}                    --operatingsystem '{{ item.os }}'{% endif %}
-    {% if item.partition_table is defined %}       --partition-table '{{ item.partition_table }}'{% endif %}
-    {% if item.pxe_loader is defined %}            --pxe-loader '{{ item.pxe_loader }}'{% endif %}
-    {% if item.root_pass is defined %}             --root-pass '{{ item.root_pass }}'{% endif %}
-#  when: "item.title not in current_host_groups.stdout"
-  with_items: "{{ host_groups }}"
-
-- name: set host group parameters 
-  command: >
-    hammer hostgroup set-parameter
-    --hostgroup-title '{{ item.0.title }}'
-    --name '{{ item.1.name }}'
-    --value '{{ item.1.value }}'
-  with_subelements: 
-  - "{{ host_groups }}"
-  - parameters
+- name: ensure host groups exist
+  foreman_hostgroup:
+    username: "{{ username }}"
+    password: "{{ password }}"
+    server_url: "{{ server_url }}"
+    organization: "{{ organization }}"
+    name: "{{ item.name }}"
+    architecture: "{{ item.architecture | default(omit) }}" 
+    compute_profile: "{{ item.compute_profile | default(omit) }}"
+    compute_resource: "{{ item.compute_resource | default(omit) }}"
+    config_groups: "{{ item.config_groups | default(omit) }}"
+    content_source: "{{ item.content_source | default(omit) }}"
+    content_view: "{{ item.content_view | default(omit) }}"
+    description: "{{ item.description | default(omit) }}"
+    domain: "{{ item.domain | default(omit) }}"
+    environment: "{{ item.environment | default(omit) }}"
+    lifecycle_environment: "{{ item.lifecycle_environment | default(omit) }}"
+    locations: "{{ item.locations | default(omit) }}"
+    medium: "{{ item.medium | default(omit) }}"
+    openscap_proxy: "{{ item.openscap_proxy | default(omit) }}"
+    operatingsystem: "{{ item.operatingsystem | default(omit) }}"
+    parameters: "{{ item.parameters | default(omit) }}"
+    parent: "{{ item.parent | default(omit) }}"
+    ptable: "{{ item.ptable | default(omit) }}"
+    puppet_ca_proxy: "{{ item.puppet_ca_proxy | default(omit) }}"
+    puppet_proxy: "{{ item.puppet_proxy | default(omit) }}"
+    pxe_loader: "{{ item.pxe_loader | default(omit) }}"
+    realm: "{{ item.realm | default(omit) }}"
+    root_pass: "{{ item.root_pass | default(omit) }}"
+    subnet: "{{ item.subnet | default(omit) }}"
+    subnet6: "{{ item.subnet6 | default(omit) }}"
+  loop: "{{ host_groups }}"
