--- a/roles/sat6-lifecycle-environments/tasks/main.yml
+++ b/roles/sat6-lifecycle-environments/tasks/main.yml
@@ -1,12 +1,14 @@
 ---
 
-- name: get current lifecycle environments
-  shell: hammer --csv lifecycle-environment list --organization '{{ organization }}' | tail -n +2 | awk -F ',' '{print $2}'
-  register: current_lifecycle_environments
-  changed_when: false
-
-- name: create lifecycle environments
-  command: hammer lifecycle-environment create --organization '{{ organization }}' --name '{{ item.name }}' --prior '{{ item.previous }}'
-  when: item.name not in current_lifecycle_environments.stdout
-  with_items: "{{ lifecycle_environments }}"
+- name: ensure lifecycle environments exist
+  katello_lifecycle_environment:
+    username: "{{ username }}"
+    password: "{{ password }}"
+    server_url: "https://{{ ansible_nodename }}"
+    organization: "{{ organization }}"
+    name: "{{ item.name }}"
+    label: "{{ item.name }}"
+    prior: "{{ item.prior }}"
+    state: present
+  loop: "{{ lifecycle_environments }}"
 
