--- a/sat6-install.yml
+++ b/sat6-install.yml
@@ -1,18 +1,20 @@
 ---
 
 - hosts: satellite
+  vars_files:
+  - vars/sat-vars.yml
 
   tasks:
 
   - name: enable satellite 6 repositories
     command: >
-    subscription-manager repos 
-    --disable '*'
-    --enable=rhel-7-server-rpms 
-    --enable=rhel-server-rhscl-7-rpms
-    --enable=rhel-7-server-satellite-6.4-rpms
-    --enable=rhel-7-server-satellite-maintenance-6-rpms
-    --enable=rhel-7-server-ansible-2.6-rpms 
+      subscription-manager repos 
+      --disable '*'
+      --enable=rhel-7-server-rpms 
+      --enable=rhel-server-rhscl-7-rpms
+      --enable=rhel-server-7-satellite-6-beta-rpms
+      --enable=rhel-7-server-satellite-maintenance-6-beta-rpms
+      --enable=rhel-7-server-ansible-2.8-rpms 
     tags: rhsm
 
   - name: make sure firewalld is enabled and running
@@ -36,6 +38,17 @@
       policy: targeted
       state: enforcing
     tags: selinux
+
+  - name: ensure chrony is installed
+    yum:
+      name: chrony
+      state: installed
+
+  - name: ensure chrony is started and enabled
+    service:
+      name: chronyd
+      state: started
+      enabled: true
 
 # these tasks verify that DNS is configured properly
 # if any of these tasks fail, the installation won't complete successully
@@ -74,8 +87,9 @@
 
   - name: run satellite-installer (this will take a while...)
     command: >
-    satellite-installer
-    --scenario satellite
-    --foreman-initial-organization '{{ organization }}'
-    --foreman-initial-location '{{ locations[0] }}'
+      satellite-installer --scenario satellite
+      --foreman-initial-admin-username "{{ username }}"
+      --foreman-initial-admin-password "{{ password }}"
+      --foreman-initial-organization "{{ organization }}"
+      --foreman-initial-location "{{ locations[0] }}"
     tags: satellite-installer
