--- a/roles/sat6-subnets/tasks/main.yml
+++ b/roles/sat6-subnets/tasks/main.yml
@@ -1,28 +1,31 @@
 ---
 
-- name: get current subnets
-  shell: hammer --csv subnet list | tail -n +2 | awk -F ',' '{print $2}'
-  register: current_subnets
-  changed_when: false
+- name: ensure subnets exist
+  foreman_subnet:
+    username: "{{ username }}"
+    password: "{{ password }}"
+    server_url: "{{ server_url }}"
+    organizations:
+    - "{{ organization }}"
+    locations: "{{ locations }}"
+    domains: "{{ domains }}"
+    name: "{{ item.name }}"
+    network: "{{ item.network }}"
+    mask: "{{ item.mask }}"
+    gateway: "{{ item.gateway | default(omit) }}"
+    mtu: "{{ item.mtu | default(omit) }}"
+    network_type: "{{ item.network_type | default(omit) }}"
+    vlanid: "{{ item.vlanid | default(omit) }}"
+    boot_mode: "{{ item.boot_mode | default(omit) }}"
+    ipam: "{{ item.ipam | default(omit) }}"
+    from_ip: "{{ item.from_ip | default(omit) }}"
+    to_ip: "{{ item.to_ip | default(omit) }}"
+    dns_primary: "{{ item.dns_primary | default(omit) }}"
+    dns_secondary: "{{ item.dns_secondary | default(omit) }}"
+    dhcp_proxy: "{{ item.dhcp_proxy | default(omit) }}"
+    discovery_proxy: "{{ item.discovery_proxy | default(omit) }}"
+    dns_proxy: "{{ item.dns_proxy | default(omit) }}"
+    remote_execution_proxies: "{{ item.remote_execution_proxies | default(omit) }}"
+    tftp_proxy: "{{ item.tftp_proxy | default(omit) }}"
+  loop: "{{ subnets }}"
 
-- name: ensure subnets are present
-  command: >
-    hammer subnet create
-    --name '{{ item.name }}'
-    --organization '{{ organization }}'
-    --locations '{{ locations|join(',') }}'
-    --domains '{{ domains|join(',') }}'
-    --tftp-id 1 
-    --network '{{ item.network_address }}'
-    --mask '{{ item.network_mask }}'
-    {% if item.gateway_address is defined %} --gateway '{{ item.gateway_address }}'{% endif %}
-    {% if item.primary_dns is defined %} --dns-primary '{{ item.primary_dns }}'{% endif %}
-    {% if item.secondary_dns is defined %} --dns-secondary '{{ item.secondary_dns }}'{% endif %}
-    --ipam '{{ item.ipam }}'
-    {% if item.ipam_from_address is defined %} --from '{{ item.ipam_from_address }}'{% endif %}
-    {% if item.ipam_to_address is defined %} --to '{{ item.ipam_to_address }}'{% endif %}
-    {% if item.vlan_id is defined %} --vlanid '{{ item.vlan_id }}'{% endif %}
-    --boot-mode '{{ item.boot_mode }}'
-    --mtu '{{ item.mtu }}'
-  when: 'item.name not in current_subnets.stdout'
-  with_items: "{{ subnets }}"
